[package]
name = "clilip"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
device_query = "2.0.0"
glob = "0.3.1"
libloading = "0.8.3"
net2 = "0.2.39"
pnet = "0.34.0"
pretty-hex = "0.4.1"


[target.x86_64-pc-windows-gnu]
rustflags = [
  "-C",
  "link-args=-L/Documents/language_testingh/RUST/CLI/CLI_LIP/ -lPacket",
]
